# needle

./: .clang-format  .clang-tidy  .clangd.in  .gitignore  CMakeLists.txt  Makefile  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  xmake.lua
.github/workflows/: check.yaml
apps/: models.py  simple_training.py
cmake/: CPM.cmake  CppModules.cmake  FetchBoostPreprocessor.cmake  FetchCatch2.cmake  FetchExpected.cmake  FetchFmt.cmake  FetchProtobuf.cmake  Pybind11.cmake
python/needle/: autograd.py  data.py  init.py  nn.py  ops.py  optim.py
python/needle/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
src/fineflow/api/python/: fineflow.cpp  py_functor.hpp  py_tensor.h  tensor_util.h
src/fineflow/core/: blob_tensor.cpp  blob_tensor.h  functional.h  op_kernel.cpp  op_kernel.h  op_kernel_factory.h  tensor.h  tensor_util.h
src/fineflow/core/common/: auto_register.hpp  data_type.h  data_type.proto  device_type.proto  error.cpp  error.h  error.proto  error_util.cpp  error_util.h  exception.h  fmt.hpp  function_traits.hpp  hash.hpp  hash_container.h  log.h  preprocess.h  registry_manager.hpp  result.hpp  result_types.h  traits.hpp  types_tuple.h  util.h
src/fineflow/core/common/pp/: join_reset.h
src/fineflow/core/cpu/: cpu_tensor.cpp  cpu_tensor.h
src/fineflow/core/functional/: basic_functor.h
src/fineflow/core/functional/impl/: basic_functor.cpp
src/fineflow/core/kernels/: add_kernel.cpp  add_kernel.h  assign_kernel.h  compact_kernel.cpp  compact_kernel.h  fill_kernel.h
src/fineflow/core/kernels/cpu/: add_kernel.cpp  assign_kernel.cpp  compact_kernel.cpp  fill_kernel.cpp
tests/: test_cifar_ptb_data.py  test_conv.py  test_fineflow_api.py  test_nd_backend.py  test_sequence_models.py
tests/cpp/: test_tensor.cpp
